fixed the image and alignment of columns

--- a/css-three-column-layout/styles.css
+++ b/css-three-column-layout/styles.css
@@ -5,7 +5,7 @@
 
 h2 {
   text-align: center;
-  margin: 50px 50px 30px;
+  margin: 50px 50px 0;
 }
 
 body {
@@ -13,7 +13,8 @@ body {
 }
 
 img {
-  padding: 10%;
+  padding: 25%;
+  width: 100%;
 }
 
 p.text {
@@ -33,12 +34,17 @@ p.text {
 .round-image {
   border-radius: 50%;
   background-color: white;
-  width: 100px;
+  margin: 30px 80px;
+}
+
+h3.text {
+  white-space: nowrap;
 }
 
 .column-one-third {
-  width: 33%;
   text-align: center;
+  margin: 0 10px;
+  width: 33%;
 }
 
 .text {
